tests/NormalTests/paczka1/fuzzy1/60627372.err
Error in line 4: Zc5vr8RSD A876 50,4
Error in line 14: Uo9Je A876 93,1
Error in line 30: Uo9Je A254 92,2
Error in line 33: Uo9Je A44 20,3
